# nba_prospects_mcp

./: .gitignore  .pre-commit-config.yaml  DATA_MATRIX_VALIDATION_REPORT.md  FIBA_SHOTS_IMPLEMENTATION.md  FIBA_VALIDATION_IMPLEMENTATION.md  IMPLEMENTATION_PLAN_LNB.md  LEAGUE_CAPABILITIES_SUMMARY.md  LEAGUE_COMPLETENESS_AUDIT.md  LNB_API_IMPLEMENTATION_SUMMARY.md  LNB_IMPLEMENTATION_PHASE2_COMPLETE.md  LNB_INTEGRATION_ANALYSIS.md  NBL_IMPLEMENTATION_STATUS.md  NBL_NZ_NBL_IMPLEMENTATION_SUMMARY.md  PROJECT_LOG.md  PROJECT_LOG_TEMP.md  README.md  VALIDATION_SUMMARY.md  coverage.xml  create_nz_nbl_game_index.py  data_availability_matrix.md  data_availability_matrix.txt  league_support_matrix.csv  lnb_integration_summary.md  lnb_stress_test_output.txt  lnb_stress_test_with_headers.txt  nz_nbl_2024.csv  pyproject.toml  test_filter_integration.py  test_filters_no_game_ids.py  test_headers_simple.py  test_lnb_complete.py  test_lnb_headers_direct.py  test_lnb_new_endpoints.py  validate_lnb_integration.py  verify_nbl_setup.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lnb-daily-update.yml
data/: basketball.duckdb  basketball.duckdb.wal  nz_nbl_game_index.csv  nz_nbl_game_index.parquet
data/game_indexes/: ABA_2023_24.csv  BAL_2023_24.csv  BCL_2023_24.csv  LKL_2023_24.csv
data/lnb/: lnb_coverage_2025_div1.json  lnb_coverage_2025_div2.json  lnb_coverage_2025_div3.json  lnb_coverage_2025_div4.json  lnb_fixtures_2025_div1.parquet  lnb_fixtures_2025_div4.parquet  lnb_shots_2025_div2.parquet
data/lnb_raw/: lnb_fixtures.parquet  lnb_pbp_events.parquet  lnb_shots.parquet
data/metadata/: availability_test.json  coverage.json
data/reports/: lnb_pbp_shots_coverage_2024_2025.csv  lnb_validation_report_20251115_072700.csv  lnb_validation_report_20251115_092255.csv
docs/: DATA_COVERAGE_INTERNATIONAL.md  DATA_SOURCE_EXPANSION_SPEC.md  DATA_SOURCE_INTEGRATION_PLAN.md  ELITE_2_INVESTIGATION_FINDINGS.md  ELITE_2_ROOT_CAUSE_RESOLUTION.md  GOLDEN_SEASON_CHANGES.md  HISTORICAL_COVERAGE_AUDIT_2025-11-18.md  HTML_MIGRATION_GUIDE.md  HTML_SCRAPING_IMPLEMENTATION_PLAN.md  INTERNATIONAL_DATA_CAPABILITY_MATRIX.md  INTERNATIONAL_LEAGUES_EXAMPLES.md  LNB_API_SETUP_GUIDE.md  LNB_COVERAGE.md  LNB_LEAGUES_COMPLETE_DISCOVERY.md  SESSION_CHANGES_SUMMARY.md  TESTING_VALIDATION_GUIDE.md  coverage.csv  data_availability_matrix.md  discover_elite2_historical.py  league_coverage_output.txt  lnb_game_level_investigation.md  lnb_leagues_discovered.json  lnb_onboarding.md
probes/: README.md  probe_acb.py  probe_nz_nbl.py  probe_template.py  probe_wnba.py
scripts/: README.md  base_golden_season.py  debug_endpoint_issues.py  golden_acb.py  golden_fiba.py  golden_lnb.py  ingest_acb_season.py  league_data_health.py  make_all_leagues_dataset.py  probe_historical_coverage.py
src/cbb_data/: __init__.py  cli.py  config.py  contracts.py  dimensions.py
src/lnb/: constants.py  validation.py
test_output/: multi_season.parquet  schedule.csv  schedule.json  schedule.parquet
test_stress_output/: multi_season.csv  multi_season.json  multi_season.parquet
tests/: README_TESTS.md  conftest.py  test_acb_restored.py  test_api_mcp_stress_comprehensive.py  test_automation_upgrades.py  test_comprehensive_datasets.py  test_comprehensive_stress.py  test_comprehensive_validation.py  test_data_availability.py  test_dataset_metadata.py  test_date_filtering.py  test_division_filtering.py  test_division_support.py  test_elite2_fixture.py  test_end_to_end.py  test_eurocup_gleague_stress.py  test_euroleague_parity.py  test_european_domestic_fetchers.py  test_exposure_events.py  test_fiba_cluster_fetchers.py  test_fiba_direct.py  test_fiba_unified.py  test_filter_stress.py  test_granularity.py  test_international_data_sources.py  test_league_integration.py  test_lkl_fetcher.py  test_lnb_api_stress.py  test_lnb_health.py  test_lnb_production_readiness.py  test_mcp_server.py  test_mcp_server_comprehensive.py  test_missing_filters.py  test_nbl_integration.py  test_nbl_official_consistency.py  test_nbl_schedule_fix.py  test_ncaa_gleague_wiring.py  test_new_leagues_stress.py  test_nz_nbl_expansion.py  test_nz_nbl_fiba_consistency.py  (+9 more)
tests/data_sources/: __init__.py  test_acb_endpoints.py  test_lnb_endpoints.py  test_nz_nbl_endpoints.py
tests/fetchers/: test_lnb_smoke.py
tests/source_validation/: test_espn_mbb.py  validate_espn_mbb.py  validate_sources_summary.py
tests/utils/: fiba_test_helpers.py  league_health.py
tools/: compute_coverage.py  debug_lnb_subleague_datasets.py  fiba_game_index_validator.py  generate_data_availability_matrix.py  generate_league_coverage_matrix.py  quick_validate_leagues.py  run_complete_validation.py  run_complete_validation.sh  system_health.py  test_league_availability.py  test_league_complete_flow.py  test_lnb_pipeline.py  test_lnb_subleague_stack.py  validate_international_data.py  verify_historical_coverage.py
tools/acb/: README.md  backfill_historical.py  setup_zenodo_data.py
tools/fiba/: README.md  build_fiba_game_index.py  build_game_index.py  collect_game_ids.py  golden_fixtures_shots.json  health_check.py  investigate_shot_endpoints.py  shot_endpoint_investigation_results.json  test_browser_scraping.py  validate_and_monitor_coverage.py  validate_golden_fixtures.py
tools/lnb/: ATRIUM_API_SUCCESS_SUMMARY.md  AUTO_DISCOVERY_OPTIONS.md  COVERAGE_INVESTIGATION_FINDINGS.md  DATA_INTEGRITY_FINDINGS.md  DEVTOOLS_CAPTURE_GUIDE.md  HISTORICAL_INGESTION_PLAN.md  HISTORICAL_URL_COLLECTION_WORKFLOW.md  HISTORICAL_UUID_DISCOVERY_GUIDE.md  INVESTIGATION_COMPLETE_SUMMARY.md  INVESTIGATION_SUMMARY.md  LNB_OPERATIONAL_RUNBOOK.md  PHASE3_AUTHENTICATION_FINDINGS.md  PIPELINE_IMPLEMENTATION_PLAN.md  README.md  README_VALIDATION.md  ROOT_CAUSE_AND_SOLUTION.md  analyze_file_differences.py  analyze_game_assignments.py  api_discovery_helper.py  audit_all_lnb_datasets.py  audit_all_uuid_collisions.py  audit_league_names_and_coverage.py  audit_lnb_season.py  build_competition_index.py  build_game_index.py  build_lnb_combined_pbp.py  build_lnb_combined_shots.py  (+160 more)
(+9130 files in other folders)
