[project]
name = "college-intl-basketball-data"
version = "0.1.0"
description = "Unified dataset puller for college (NCAA) and international basketball data"
authors = [
    {name = "Basketball Data Team"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    # Core data manipulation
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Schema validation
    "pydantic>=2.0.0",

    # Date/time utilities
    "python-dateutil>=2.8.0",

    # HTTP clients
    "requests>=2.31.0",
    "httpx>=0.24.0",

    # HTML parsing (for Sports-Reference)
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # ESPN College Basketball (Men's) - SportsDataverse
    "sportsdataverse>=0.0.30",

    # EuroLeague Official API
    "euroleague-api>=0.0.1",

    # Sports-Reference scraper (includes college basketball)
    "sportsipy>=0.5.0",

    # Optional: caching
    "redis>=4.0.0",

    # Optional: advanced formats
    "pyarrow>=10.0.0",
    "fastparquet>=2022.1.0",

    # Utilities
    "tenacity>=8.2.0",  # retry logic
    "tqdm>=4.65.0",  # progress bars
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.282",
    "mypy>=1.4.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cbb_data"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cbb_data",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
