[project]
name = "college-intl-basketball-data"
version = "0.1.0"
description = "Unified dataset puller for college (NCAA) and international basketball data"
authors = [
    {name = "Basketball Data Team"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Core data manipulation
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Schema validation
    "pydantic>=2.0.0",

    # Date/time utilities
    "python-dateutil>=2.8.0",

    # HTTP clients
    "requests>=2.31.0",
    "httpx>=0.24.0",

    # HTML parsing (for Sports-Reference)
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # ESPN College Basketball (Men's) - SportsDataverse
    "sportsdataverse>=0.0.30",

    # EuroLeague Official API
    "euroleague-api>=0.0.1",

    # Sports-Reference scraper (includes college basketball)
    "sportsipy>=0.5.0",

    # CEBL (Canadian Elite Basketball League) - FIBA LiveStats wrapper
    "ceblpy>=0.1.0",

    # Optional: caching
    "redis>=4.0.0",

    # Optional: advanced formats
    "pyarrow>=10.0.0",
    "fastparquet>=2022.1.0",

    # Utilities
    "tenacity>=8.2.0",  # retry logic
    "tqdm>=4.65.0",  # progress bars

    # Markdown formatting (for MCP resources)
    "tabulate>=0.9.0",
]

[project.scripts]
# NBL Data Export CLI (R bridge to nblR package)
nbl-export = "cbb_data.fetchers.nbl_official:cli_export"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.282",
    "mypy>=1.4.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
]

# REST API Server dependencies
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
]

# MCP Server dependencies
mcp = [
    "mcp>=1.0.0",
]

# All server dependencies (API + MCP)
servers = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "mcp>=1.0.0",
]

# NZ-NBL JS-rendered schedule discovery (Genius Sports widget)
nz_nbl = [
    "playwright>=1.49.0",
]

# ACB pbp + shot charts via BAwiR R package
acb = [
    "rpy2>=3.5.0",
]

# Full scraping bundle (all league-specific scrapers)
scraping = [
    "playwright>=1.49.0",
    "rpy2>=3.5.0",
]

# Full installation with all optional dependencies
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
    "black>=23.7.0",
    "ruff>=0.0.282",
    "mypy>=1.4.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "mcp>=1.0.0",
    "playwright>=1.49.0",
    "rpy2>=3.5.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cbb_data"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tools/**/*.py" = ["E402"]  # Tools modify sys.path before importing

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Per-module type checking overrides
[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cbb_data",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "lnb: LNB Pro A (France) league tests",
    "slow: Slow-running tests (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
